Mise à jour des liens vers les photos pour ouvrir dans un nouvel onglet et renommage de l'image de portrait pour plus de clarté

--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
                 Étudiant de deuxième année en BUT Métiers du Multimédia et de l'Internet à l'IUT Bordeaux Montaigne.
             </p>
         </div>
-        <img src="images/TomFInal.webp" alt="portrait">
+        <img src="images/PortraitTom.webp" alt="portrait">
     </section>
     <a href="#about" class="scrollCall">
         <img src="images/arrow-scroll-call.svg" alt="flèche de l'appel à défilement">
@@ -99,7 +99,7 @@
         </p>
         <div>
             <a class="cta" href="/pages/projects.html">tous mes projets</a>
-            <a class="cta" href="https://www.behance.net/tomwainberg">toutes mes photos</a>
+            <a class="cta" href="https://www.behance.net/tomwainberg" target="_blank">toutes mes photos</a>
 
         </div>
     </section>
@@ -176,7 +176,7 @@
             </a>
         </div>
 
-        <a class="cta" href="https://www.behance.net/tomwainberg">plus de photos...</a>
+        <a class="cta" href="https://www.behance.net/tomwainberg" target="_blank">plus de photos...</a>
     </section>
 
 
